<resources>
    <string name="use_one">1.个人中心-可修改个人信息、密码，查看服务商信息和更新版本。</string>
    <string name="use_two">2.报警信息-可查看报警信息记录，且会发推送到手机。</string>
    <string name="use_three">3.定位查车-点击车辆可查看车辆信息，点击窗口可进行设备信息的修改、车辆追踪操作、历史记录播放。</string>
    <string name="use_four">4.胎压信息-可查看具备胎压配置的车辆胎压信息。</string>
    <string name="use_five">5.车辆列表-可搜索查看账户下所有车辆。</string>
    <string name="use_six">6.二维码-用APP登录扫描二维码可以登录。</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="permission_already_granted">Required permissions have already been granted to AlipaySDK</string>
    <string name="permission_rejected">Missing permissions. Please grant required permissions in system settings</string>
    <string name="permission_granted">Required permissions have been granted to AlipaySDK</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private" >Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>

    <string name="pay_tip">您的设备服务已到期，为了不影响您的使用，请及时充值。</string>
</resources>
